--- a/freza.css
+++ b/freza.css
@@ -1,3 +1,30 @@
+.slides {
+  display: none;
+}
+
+.slideshow-container {
+  max-width: 800px;
+  position: relative;
+  margin: auto;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
 .heart {
   position: absolute;
   font-size: 24px;
@@ -10,7 +37,7 @@ html, body {
 }
 
 body {
-  background-image: url("cat-hugs.webp  ");
+  background-image: url(cat-hugs.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
