--- a/freza.css
+++ b/freza.css
@@ -37,7 +37,7 @@ html, body {
 }
 
 body {
-  background-image: url(cat-hugs.webp);
+  background-image: url("IMG-20230301-WA0053.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
