--- a/freza.css
+++ b/freza.css
@@ -1,29 +1,3 @@
-.slides {
-  display: none;
-}
-
-.slideshow-container {
-  max-width: 800px;
-  position: relative;
-  margin: auto;
-}
-
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
 
 .heart {
   position: absolute;
@@ -37,12 +11,13 @@ html, body {
 }
 
 body {
-  background-image: url(""C:\Users\Shank\.vscode\programs\web development\Freza\IMG-20230301-WA0053.jpg"");
+  background-image: url("IMG-20230301-WA0053.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-} 
+}
+
 body {
   background-color: #ffe6ea;
   font-family: Arial, sans-serif;
@@ -67,4 +42,18 @@ button {
 }
 button:hover {
   background-color: #ff1a4f;
+}
+body {
+  position: relative;
+}
+
+#text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  font-size: 14px;
+  margin-bottom: 20px ;
 }
